Update EMBED_URL for video source

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     // If you're embedding a video (Option A), set your EMBED url here.
     // For YouTube: click Share -> Embed, then copy the "src" from the iframe.
     // Example: "https://www.youtube.com/embed/VIDEO_ID?autoplay=1"
-    const EMBED_URL = "https://www.youtube.com/embed/p2C-rRnSWzI?si=BiOpDuIM_MIbUZMy"; // <-- paste embed src here
+    const EMBED_URL = "https://www.youtube.com/embed/1tSSvSfa3K4?si=8jxi26nYBrtUvzcs"; // <-- paste embed src here
 
     // How "aggressively" the NO button dodges
     const DODGE_DISTANCE = 120; // px
